:meat_on_bone: adding some styles to the tk design itself. TODO: make sure there is sufficient compartamentalization between the TK layout and actual end component design. right now the lines are blurry and there is style creep from one to the other TODO: update the documenation TODO: update other example pages. right now they're all kinds of crazy

--- a/docs/css/docs.css
+++ b/docs/css/docs.css
@@ -166,4 +166,25 @@ h1 {
 .nypl-ally-table th {
   text-align: left; }
 
+.toolkit .nypl-page-header {
+  background-color: #caeaf7; }
+  .toolkit .nypl-page-header h2 {
+    color: #135772;
+    margin-bottom: 0.25rem;
+    text-shadow: 1px 1px 0 #6fc5e8; }
+    .toolkit .nypl-page-header h2 + span {
+      color: #135772;
+      font-style: italic; }
+.toolkit .main-page h3::before {
+  background: #135772;
+  content: "";
+  display: block;
+  height: 0.25rem;
+  margin-bottom: 0.5rem;
+  width: 5rem; }
+.toolkit footer {
+  background-color: #caeaf7;
+  color: #135772;
+  height: 6rem; }
+
 /*# sourceMappingURL=docs.css.map */
